[package]
name = "ttcc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.64"
serde = {version = "1.0.126", features=["derive"]}
strong-xml = "0.6.3"
pomelo = "0.1.5"
itertools = "0.10.1"
rand = "0.8.4"
